# ONIKS-NeuralNet

./: .coverage  .gitignore  .pre-commit-config.yaml  COLAB_README.md  COLAB_SIMPLE.md  CONTRIBUTING.md  DUAL_CIRCUIT_IMPLEMENTATION.md  HISTORY_FEATURE_IMPLEMENTATION.md  LICENSE  LLM_AUDIT_SUMMARY.md  MANIFEST.in  ONIKS_Colab_Demo.ipynb  ONIKS_Simple_Colab.ipynb  QUICK_START.md  README.md  README_COLAB_QUICK.md  TEST_SUMMARY.md  TIMEOUT_AUDIT_COMPLETE.md  USER_GUIDE.md  colab_quick_start.py  colab_simple.py  example_usage.py  hello.txt  llm_audit_log.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_cli.py  run_reasoning_test.py  run_task_decomposition_test.py  run_tests.py  setup.py  task.txt  test_llm_transparency.py  test_parser_bug.py
.claude/agents/: backend-dev-agent.md  docs-writer.md  graph-neural-architect.md  neural-network-code-reviewer.md  neural-network-prompt-engineer.md  qa-agent.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
oniks/: __init__.py  cli.py
oniks/agents/: __init__.py  base.py  planner_agent.py  reasoning_agent.py  router_agent.py
oniks/core/: __init__.py  checkpoint.py  exceptions.py  graph.py  state.py
oniks/llm/: __init__.py  client.py
oniks/tools/: __init__.py  base.py  core_tools.py  file_tools.py  fs_tools.py  shell_tools.py
oniks/ui/: __init__.py  cli.py  colab.py  runner.py
output/: log.txt
tests/: __init__.py
tests/integration/: __init__.py  test_full_system.py  test_task_decomposition.py
tests/unit/: __init__.py
tests/unit/agents/: __init__.py  test_base.py  test_planner_agent.py  test_reasoning_agent.py  test_reasoning_agent_parser.py  test_reasoning_agent_updated.py
tests/unit/core/: test_checkpoint.py  test_graph.py  test_state.py
tests/unit/llm/: __init__.py  test_client.py
tests/unit/tools/: __init__.py  test_base.py  test_core_tools.py  test_file_tools.py  test_fs_tools.py  test_shell_tools.py
